caption visibility issue on last row of gallery

--- a/packages/galleryberg-gallery-block/src/gallery/common.scss
+++ b/packages/galleryberg-gallery-block/src/gallery/common.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 
 .galleryberg-gallery-container {
-	overflow: hidden;
+	overflow: visible;
 	// Cropped Images.
 	&.alignright,
 	&.alignleft {
